--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,19 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "genealabs/laravel-model-caching": "0.7.0",
+        "guzzlehttp/guzzle": "^6.4",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "sentry/sentry-laravel": "^1.5",
+        "spatie/laravel-backup": "^6.7",
+        "spatie/laravel-sitemap": "^5.5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laravel/homestead": "^9.3",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
