--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "fideloper/proxy": "^4.0",
-        "genealabs/laravel-model-caching": "0.7.0",
+        "genealabs/laravel-model-caching": "^0.7.3",
         "guzzlehttp/guzzle": "^6.4",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "sentry/sentry-laravel": "^1.5",
         "spatie/laravel-backup": "^6.7",
         "spatie/laravel-sitemap": "^5.5"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "laravel/homestead": "^9.3",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
